<?xml version="1.0"?>
<package format="2">
  <name>opensimrt_msgs</name>
  <version>0.0.1</version>
  <description>The opensimrt_msgs package</description>

  <maintainer email="frekle@kth.se">Frederico Klein</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
	 
</package>
